# django-project-template

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
apps/core/: admin.py  urls.py  views.py
apps/core/api/v1/: urls.py
apps/core/api/v1/serializers/: __init__.py  author.py  post.py  tag.py
apps/core/api/v1/views/: __init__.py  general.py  posts.py
apps/core/management/commands/: createsuperuser_credentials.py
apps/core/migrations/: 0001_initial.py  0002_siteconfiguration.py  0003_author_editor_remove_post_created_and_more.py  0004_alter_post_content_type.py  0005_audittrail.py
apps/core/models/: __init__.py  audit_trail.py  mixins.py  post.py  profiles.py  site_configuration.py  tag.py
apps/core/templates/: base.html  home.html
apps/secondary/: apps.py  urls.py
apps/secondary/api/v1/: urls.py  views.py
apps/utils/: __init__.py  admin.py
apps/utils/db/: __init__.py  mixins.py
config/: __init__.py  base.py  development.py  utils.py
project_name/: asgi.py  urls.py
